--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     
+    <div id="header">
+        <h1>Library</h1>
+        <button id="addBook">+ Add Book</button>
+    </div>
 
 </body>
 </html>
