Add ability to add new books using the form

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <input id="read" name="read" type="checkbox"/>
         </div>
         
-        <button id="submitButton">Submit</button>
+        <button type="submit" id="submitButton">Submit</button>
       
     </form>
 
