--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="logic.js" defer></script>
 </head>
 <body>
     
@@ -59,5 +60,4 @@
     </form>
 
 </body>
-    <script src="logic.js"></script>
 </html>
